update function in progress

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,5 +71,12 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$arch_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$arch_version"
 
+    // Retrofit & OkHttp
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    // This library is used by retrofit internally to convert json-pojo and pojo-json
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    //This library is used to observe the API logs, Http status code and the API response
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
+
 
 }
