--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
 
     defaultConfig {
         applicationId "com.rkpsx7.moneymanager7"
-        minSdk 21
+        minSdk 23
         targetSdk 30
         versionCode 2
         versionName "2"
@@ -76,6 +76,8 @@ dependencies {
     implementation 'androidx.room:room-ktx:2.3.0'
     kapt 'androidx.room:room-compiler:2.3.0'
 
+    //crop image
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
 
     //implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
 
@@ -120,9 +122,6 @@ dependencies {
     // For example, declare the dependencies for Firebase Authentication and Cloud Firestore
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-firestore'
-
-
-
 
     //mp android charts
     implementation "androidx.appcompat:appcompat:1.3.1"
